# snakeGame

./: CMakeLists.txt  snakeGame.sln
snakeGame/: CMakeLists.txt  snakeGame.vcxproj  snakeGame.vcxproj.filters
snakeGame/include/classes/: GameEngine.hpp  Snake.hpp
snakeGame/include/functions/: functions.hpp
snakeGame/include/structures/: structures.hpp
snakeGame/src/classes/: GameEngine.cpp  Snake.cpp
snakeGame/src/functions/: functions.cpp
snakeGame/src/treatment/: run.cpp
